styles.css
:root {
    /* size of curved corners */
    --field_border_radius: 2.5rem;

    /* vertical margin between title, courses and buttons*/
    --between_margin: 2rem;

    /* size multiplier of contact icons*/
    --contact-size-multiplier: 1;
}

body {
    background-color: skyblue;
    font-size: 160%;
    font-family: 'Times New Roman', serif;
}

p {
    font-size: 150%;
}

#otsikko {
    text-align: center;
}

.info {
    border-radius: var(--field_border_radius);

    margin: var(--between_margin) 1rem;
    padding: 1rem 1.5rem;

    background-color: white;
}

.ateriatyyppi {
    margin: 0rem;
    text-align: right;

    flex-shrink: 0;
}

.ateria {
    border-radius: var(--field_border_radius);

    margin: var(--between_margin) 1rem;
    padding: calc(var(--between_margin) - 1.5rem) 1.5rem;

    display: flex;
    flex-direction: row;
    align-items: center;

    /* Distance between course category and the course */
    gap: 2rem;
}

.ruoka {
    margin: 1.5rem 0rem;
}

#seka {
    background-color: lightcoral;
}

#kasvis {
    background-color: lightgreen;
}

#navigointi {
    margin: calc(1rem + var(--between_margin)) 0rem;

    /* Set buttons on sides of the screen. */
    display: flex;
    justify-content: space-between;
}

.nappi {
    font-size: 200%;
    background-color: white;

    margin: 0.75rem;
    padding: 1.5rem;

    border-radius: var(--field_border_radius);
    border-style: outset;
    border-width: 0.25rem;
    border-color: black;
}

#contacts {
    margin: 0rem 0.5rem 0.75rem 0.5rem;

    position: fixed;
    bottom: 0;
    right: 0;

    display: flex;
    flex-direction: row-reverse;
}

.contact-filler {
    /* Moves contact buttons to left so they don't overlap with the 'seuraava'-button. 
       The filler is not displayed by default. */
    display: none;
}

.contact {
    /* Multiplying contact icon size by the size multiplier. */
    margin: 0rem calc(2rem * var(--contact-size-multiplier)) 0rem 0rem;

    border-radius: calc(3rem * var(--contact-size-multiplier));
    width: calc(6rem * var(--contact-size-multiplier));
    height: calc(6rem * var(--contact-size-multiplier));
}

